--- a/style.scss
+++ b/style.scss
@@ -199,6 +199,7 @@ nav {
     }
     &-item {
         flex: 0 0 50%;
+        text-align: center;
         padding: 43px 0 63px;
         background-size: 190px 171px; 
         background-repeat: no-repeat;
