--- a/style.scss
+++ b/style.scss
@@ -213,11 +213,11 @@ nav {
             background-position: 100% bottom;
         }
     }
-    &-man {
-        background-image: url("../img/man.png");
+    &-coffee {
+        background-image: url("../img/coffee.png");
     }
-    &-woman {
-        background-image: url("../img/woman.png");
+    &-tea {
+        background-image: url("../img/tea.png");
         
     }
     &-title {
