--- a/style.scss
+++ b/style.scss
@@ -192,7 +192,8 @@ nav {
             flex: 0 0 100%;
         }
         @include breakpoint (xs) {
-            padding: 27px 0 84px;
+            padding: 40px 0 84px;
+            text-align: center;
             background-size: 153px 130px;
             background-position: 100% bottom;
         }
