--- a/style.scss
+++ b/style.scss
@@ -97,6 +97,7 @@ nav {
     text-transform: uppercase;
     text-decoration: none;
     padding: 18px 28px;
+    border-radius: 15px;
     &-xs {
         padding: 5px 28px;
     }
