--- a/_variables.scss
+++ b/_variables.scss
@@ -1,7 +1,7 @@
 $accent: #4b3728;
 $dark: #302929;
 $light: #FFFFFF;
-$back: #F9F6F1
+$back: #F9F6F1;
 $gray: #CBCFD4;
 $light-gray: #F4F4F4;
 $dark-gray: #8D8D8D;
