--- a/css/style.css
+++ b/css/style.css
@@ -450,7 +450,7 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 40%;
           flex: 0 0 40%;
-  color: #F9F6F1;
+  color: #FFFFFF;
 }
 
 @media (max-width: 992px) {
